hphp/hack/test/typecheck/variadic_args7.php.exp
File "variadic_args7.php", line 3, characters 27-27:
A variadic parameter ('...') may not be followed by a comma. (Parsing[1002])
